 2012-06-20 09:35  paulbeach 
   M builds/posix/postfix.darwin
Copy libfbclient.dylib to Firebird SuperServer Framework Libraries to support the ODBC driver

 2012-06-04 11:53  alexpeshkoff 
   M src/jrd/event.cpp
Fixed CORE-3859: Too many different dynamic events crash server

 2012-05-26 21:59  hvlad 
   M src/jrd/dpm.epp
Fixed bug CORE-3855 : Blobs, inserted into GLOBAL TEMPORARY TABLE ON COMMIT DELETE ROWS, could be placed into newly allocated pages even if there is enough free place on some existing data page

 2012-05-23 06:12  paul_reeves 
   M builds/install/arch-specific/win32/After_Installation.url
   M builds/install/arch-specific/win32/BuildExecutableInstall.bat
   M builds/install/arch-specific/win32/FirebirdInstall_20.iss
Synchronize changes from R2_1_5 to Branch B2_1_Release
 - Modify After_Installation url to include firebird version.

 2012-05-17 12:15  dimitr 
   M doc/WhatsNew
Updated the docs.

 2012-05-17 09:10  dimitr 
   M src/jrd/par.cpp
One more correction. This restores the accidentally changed original logic.

 2012-05-17 08:54  dimitr 
   M src/jrd/par.cpp
Correction.

 2012-05-17 08:12  dimitr 
   M src/jrd/par.cpp
More fixes for CORE-3557.

 2012-05-11 19:47  hvlad 
   M src/jrd/btr.cpp
Fixed bug CORE-3841 : Corrupted database after inserting rows.
It should also fix CORE-3839 : Values disappearing from index

 2012-05-11 19:47  hvlad 
   M src/jrd/validation.cpp
Fixed bug CORE-3844 : Validation not detects one specific case of index corruption

 2012-04-27 16:30  dimitr 
   M src/dsql/pass1.cpp
Fixed CORE-3834: Usage of a NATURAL JOIN with a derived table crashes the server.

 2012-04-26 09:39  paulbeach 
   M builds/install/misc/firebird.conf
Make the conf. parameter DummyPacketInterval more accurate.

 2012-04-13 09:08  dimitr 
   M src/dsql/pass1.cpp
Additional fix for CORE-3807. Otherwise, _utf8 'A' is considered equal to _win1251 'ABCD' etc. The original code didn't check for charsets/collations but IMHO this was wrong.
