@@ -1,3 +1,11 @@
+ 2012-06-27 17:57  dimitr 
+   M src/misc/writeBuildNum.sh
+Bumped the version number.
+
+ 2012-06-27 11:54  alexpeshkoff 
+   M src/jrd/isc_file.cpp
+Backported fix for posix of CORE-3875: GBak does not check correctly parameters and backups random database with -B ":"
+
  2012-06-20 09:35  paulbeach 
    M builds/posix/postfix.darwin
 Copy libfbclient.dylib to Firebird SuperServer Framework Libraries to support the ODBC driver
